# emex64

./: CMakeLists.txt  LICENSE  Makefile  emex64.nanorc
emex64asm/: CMakeLists.txt
emex64asm/src/: cmptok.c  code.c  compiler.c  diag.c  emit.c  label.c  macro.c  main.c  opcode.c  register.c  section.c
emex64lib/: CMakeLists.txt
emex64lib/src/asm/: cmptok.c  code.c  compiler.c  diag.c  emit.c  invocation.c  label.c  macro.c  opcode.c  options.c  register.c  section.c
emex64lib/src/support/: bitwalker.c  diag.c  fdwalker.c  parser.c
emex64lib/src/vm/: core.c  machine.c  memory.c  mmu.c
emex64vm/: CMakeLists.txt
emex64vm/src/: core.c  machine.c  main.c  memory.c  mmio.c  mmu.c
emex64vm/src/device/: display.c  display.m  interrupt.c  mc.c  platform.c  rtc.c  timer.c  uart.c
emex64vm/src/instruction/: alu.c  core.c  ctrl.c  data.c
emexutils/: CMakeLists.txt
emexutils/src/: bitwalker.c  fdwalker.c  object.c  parser.c
include/emex64asm/: cmptok.h  code.h  compiler.h  diag.h  emit.h  label.h  macro.h  opcode.h  register.h  section.h  type.h
include/emex64vm/: core.h  machine.h  memory.h  mmio.h  mmu.h
include/emex64vm/device/: display.h  interrupt.h  mc.h  platform.h  rtc.h  timer.h  uart.h
include/emex64vm/instruction/: alu.h  core.h  ctrl.h  data.h  instruction.h
include/emexutils/: bitwalker.h  fdwalker.h  object.h  parser.h
include/lautils/: object.h
tests/badapple/: Makefile
tests/badapple/src/: badapple.e64
tests/emex64OS/: LICENSE  Makefile  README.md
tests/emex64OS/src/: font.e64  gui.e64  pmm.l64  put.e64  rtc.e64  start.e64
(+21 files in other folders)
